--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.20.0",
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
